# pico_coffee_roaster

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
about/: index.html
contributing/: index.html
docs/: index.md
en/: index.html
en/about/: index.html
en/contributing/: index.html
en/get_started/: index.html
en/how_to_integrate/: index.html
get_started/: index.html
hardware/3d_models/: roaster_case.stl
hardware/control/: control.kicad_pcb  control.kicad_prl  control.kicad_pro  control.kicad_sch
hardware/motors/: motors-NPTH.drl  motors-PTH.drl  motors.kicad_pcb  motors.kicad_prl  motors.kicad_pro  motors.kicad_sch
hardware/power/: power.kicad_pcb  power.kicad_prl  power.kicad_pro  power.kicad_sch
how_to_integrate/: index.html
include/: config.h  control.h  display.h  encoder.h  fc_detector.h  max31865.h  motor.h  profiles.h  system_state.h  temperature.h
search/: search_index.json
src/: control.c  display.c  encoder.c  fc_detector.c  main.c  max31865.c  motor.c  profiles.c  roaster_rotines.c  system_rotines.c  system_state.c  temperature.c  triac.pio
